decouple model logic from transport
