# proto/gen/openapi/docs.swagger.json
@@ -143,7 +143,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/userUserResponse"
+              "$ref": "#/definitions/userGetUserResponse"
             }
           },
           "default": {
@@ -248,7 +248,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/userUserResponse"
+              "$ref": "#/definitions/userGetUserResponse"
             }
           },
           "default": {
@@ -319,7 +319,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/userUserResponse"
+              "$ref": "#/definitions/userGetUserResponse"
             }
           },
           "default": {
@@ -502,7 +502,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/userUserResponse"
+            "$ref": "#/definitions/userGetUserResponse"
           }
         }
       }
@@ -522,29 +522,7 @@
         }
       }
     },
-    "userLoginUserRequest": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        }
-      }
-    },
-    "userLoginUserResponse": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "$ref": "#/definitions/userUserResponse"
-        },
-        "token": {
-          "type": "string"
-        }
-      }
-    },
-    "userUserResponse": {
+    "userGetUserResponse": {
       "type": "object",
       "properties": {
         "id": {
@@ -576,6 +554,28 @@
         "updatedAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "userLoginUserRequest": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "userLoginUserResponse": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "$ref": "#/definitions/userGetUserResponse"
+        },
+        "token": {
+          "type": "string"
         }
       }
     }
